dev/manifests/cluster-config/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "security-webhook.dx.rtx.com"
webhooks:
  - name: "security-webhook.dx.rtx.com"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: security-webhook
        path: /validate-pods
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lVQVJ0c1hUYU04d3RaUHZUb0srb0VTQzRhcitrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tERUxNQWtHQTFVRUJoTUNRVlV4R1RBWEJnTlZCQU1NRUhObFkzVnlhWFI1TFhkbFltaHZiMnN3SGhjTgpNakl3TmpJMk1qQXlOekkwV2hjTk1qTXdOakkyTWpBeU56STBXakFvTVFzd0NRWURWUVFHRXdKQlZURVpNQmNHCkExVUVBd3dRYzJWamRYSnBkSGt0ZDJWaWFHOXZhekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBS3ZMUHVnYThoREpMMlFydU5NOXJ3RTZPTkdTckJOaEliNUg3QThqMStRMVNjSVFSbElPTTZqbwp5dUZ1S3hxNy92 [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
